--- a/src/column/column.named.size.modifiers.scss
+++ b/src/column/column.named.size.modifiers.scss
@@ -26,7 +26,7 @@
     @each $label, $percentage in $percentages {
         $size: 'xs';
 
-        @include at-viewport-min($size) {
+        @include viewport-min($size) {
             @include modifier('#{$size}-#{$label}') {
                 flex: 0 0 $percentage;
             }
@@ -36,7 +36,7 @@
     @each $label, $percentage in $percentages {
         $size: 'sm';
 
-        @include at-viewport-min($size) {
+        @include viewport-min($size) {
             @include modifier('#{$size}-#{$label}') {
                 flex: 0 0 $percentage;
             }
@@ -46,7 +46,7 @@
     @each $label, $percentage in $percentages {
         $size: 'md';
 
-        @include at-viewport-min($size) {
+        @include viewport-min($size) {
             @include modifier('#{$size}-#{$label}') {
                 flex: 0 0 $percentage;
             }
@@ -56,7 +56,7 @@
     @each $label, $percentage in $percentages {
         $size: 'lg';
 
-        @include at-viewport-min($size) {
+        @include viewport-min($size) {
             @include modifier('#{$size}-#{$label}') {
                 flex: 0 0 $percentage;
             }
@@ -66,7 +66,7 @@
     @each $label, $percentage in $percentages {
         $size: 'xl';
 
-        @include at-viewport-min($size) {
+        @include viewport-min($size) {
             @include modifier('#{$size}-#{$label}') {
                 flex: 0 0 $percentage;
             }
