--- a/src/column/column.visibility.modifiers.scss
+++ b/src/column/column.visibility.modifiers.scss
@@ -1,29 +1,29 @@
 @include root('column') {
-    @include at-viewport-exact('xs') {
+    @include viewport-exact('xs') {
         @include modifier('xs-hidden') {
             display: none !important;
         }
     }
 
-    @include at-viewport-exact('sm') {
+    @include viewport-exact('sm') {
         @include modifier('sm-hidden') {
             display: none !important;
         }
     }
 
-    @include at-viewport-exact('md') {
+    @include viewport-exact('md') {
         @include modifier('md-hidden') {
             display: none !important;
         }
     }
 
-    @include at-viewport-exact('lg') {
+    @include viewport-exact('lg') {
         @include modifier('lg-hidden') {
             display: none !important;
         }
     }
 
-    @include at-viewport-exact('xl') {
+    @include viewport-exact('xl') {
         @include modifier('xl-hidden') {
             display: none !important;
         }
