Refactor edgeless modifiers to layout root.

--- a/src/layout/layout.behaviour.modifiers.scss
+++ b/src/layout/layout.behaviour.modifiers.scss
@@ -14,4 +14,34 @@
             flex: 1;
         }
     }
+
+    @include modifier('edgeless') {
+        padding: 0rem;
+    }
+
+    @each $size in 'xs', 'sm', 'md', 'lg', 'xl' {
+        @include viewport-exact($size) {
+            @include modifier('#{$size}-edgeless') {
+                padding: 0rem;
+            }
+        }
+    }
+
+    @include viewport-under('sm') {
+        @include modifier('sm-edgeless-down') {
+            padding: 0rem;
+        }
+    }
+
+    @include viewport-under('md') {
+        @include modifier('md-edgeless-down') {
+            padding: 0rem;
+        }
+    }
+
+    @include viewport-under('lg') {
+        @include modifier('lg-edgeless-down') {
+            padding: 0rem;
+        }
+    }
 }
