Remove overflow: hidden from global to edgeless modifier.

--- a/src/layout/layout.behaviour.modifiers.scss
+++ b/src/layout/layout.behaviour.modifiers.scss
@@ -17,6 +17,7 @@
 
     @include modifier('edgeless') {
         padding: 0rem;
+        overflow: hidden;
     }
 
     @each $size in 'xs', 'sm', 'md', 'lg', 'xl' {
