--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -1,6 +1,6 @@
 .Navigation {
     background-color: #FFEB3B;
-    padding: 1rem 0rem;
+    padding: 1rem;
     position: fixed;
     width: 100%;
     z-index: 999;
@@ -21,12 +21,15 @@
         padding: 0;
         list-style-type: none;
         display: inline-block;
+
+        & + & {
+            margin-left: 0.8rem;
+        }
     }
 
     @at-root &__link {
         font-weight: 700;
         text-decoration: none;
         color: black;
-        margin-left: 0.8rem;
     }
 }
