--- a/src/column/column.offset.modifiers.scss
+++ b/src/column/column.offset.modifiers.scss
@@ -13,6 +13,10 @@
     @for $i from 1 through $column-count {
         $size: 'xs';
 
+        @include modifier('#{$size}-offset-#{$i}-up') {
+            margin-left: ($i / $column-count) * 100%;
+        }
+
         @include viewport-exact($size) {
             @include modifier('#{$size}-offset-#{$i}') {
                 margin-left: ($i / $column-count) * 100%;
@@ -22,6 +26,12 @@
 
     @for $i from 1 through $column-count {
         $size: 'sm';
+
+        @include viewport-min($size) {
+            @include modifier('#{$size}-offset-#{$i}-up') {
+                margin-left: ($i / $column-count) * 100%;
+            }
+        }
 
         @include viewport-exact($size) {
             @include modifier('#{$size}-offset-#{$i}') {
@@ -33,6 +43,12 @@
     @for $i from 1 through $column-count {
         $size: 'md';
 
+        @include viewport-min($size) {
+            @include modifier('#{$size}-offset-#{$i}-up') {
+                margin-left: ($i / $column-count) * 100%;
+            }
+        }
+
         @include viewport-exact($size) {
             @include modifier('#{$size}-offset-#{$i}') {
                 margin-left: ($i / $column-count) * 100%;
@@ -43,6 +59,12 @@
     @for $i from 1 through $column-count {
         $size: 'lg';
 
+        @include viewport-min($size) {
+            @include modifier('#{$size}-offset-#{$i}-up') {
+                margin-left: ($i / $column-count) * 100%;
+            }
+        }
+
         @include viewport-exact($size) {
             @include modifier('#{$size}-offset-#{$i}') {
                 margin-left: ($i / $column-count) * 100%;
@@ -52,6 +74,12 @@
 
     @for $i from 1 through $column-count {
         $size: 'xl';
+
+        @include viewport-min($size) {
+            @include modifier('#{$size}-offset-#{$i}-up') {
+                margin-left: ($i / $column-count) * 100%;
+            }
+        }
 
         @include viewport-exact($size) {
             @include modifier('#{$size}-offset-#{$i}') {
