--- a/src/column/column.layout.modifiers.scss
+++ b/src/column/column.layout.modifiers.scss
@@ -25,6 +25,13 @@
         }
     }
 
+    @include viewport-under('md') {
+        @include modifier('sm-edgeless-down') {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+    }
+
     @include viewport-exact('sm') {
         @include modifier('sm-edgeless') {
             padding-left: 0px;
@@ -39,6 +46,13 @@
         }
     }
 
+    @include viewport-under('lg') {
+        @include modifier('md-edgeless-down') {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+    }
+
     @include viewport-exact('md') {
         @include modifier('md-edgeless') {
             padding-left: 0px;
@@ -48,6 +62,13 @@
 
     @include viewport-min('lg') {
         @include modifier('lg-edgeless-up') {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+    }
+
+    @include viewport-under('xl') {
+        @include modifier('lg-edgeless-down') {
             padding-left: 0px;
             padding-right: 0px;
         }
